Fix for navbar going behind proj cards

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 9999;
 }
 
 .sub-nav-item {
